Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19879

local_oid_storage_fini()) ASSERTION( env ) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Medium Medium
    • Lustre 2.18.0
    • None
    • None
    • 3
    • 9223372036854775807

      umount vs procsfs access:

      [   43.419704] Lustre: lustre-MDT0000: Recovery over after 0:01, of 2 clients 0 recovered and 2 were evicted.
      [   43.611037] LustreError: 12482:0:(local_storage.c:955:local_oid_storage_fini()) ASSERTION( env ) failed: 
      [   43.611160] LustreError: 12482:0:(local_storage.c:955:local_oid_storage_fini()) LBUG
      [   43.614299] CPU: 0 PID: 12482 Comm: lctl Tainted: G        W  O      -------  ---  5.14.0 #17
      [   43.614410] Hardware name: QEMU Standard PC (i440FX + PIIX, 1996), BIOS 1.17.0-8.fc42 06/10/2025
      [   43.614487] Call Trace:
      [   43.614510]  <TASK>
      [   43.614535]  dump_stack_lvl+0x57/0x7d
      [   43.614579]  lbug_with_loc.cold+0x5/0x51 [libcfs]
      [   43.614621]  local_oid_storage_fini+0x160/0x190 [obdclass]
      [   43.614725]  llog_osd_cleanup+0x19/0x50 [obdclass]
      [   43.614807]  __llog_ctxt_put+0x81/0x130 [obdclass]
      [   43.614886]  mdd_changelog_size_ctxt.isra.0+0x94/0x2b0 [mdd]
      [   43.614963]  changelog_size_show+0x4d/0xa0 [mdd]
      [   43.615024]  sysfs_kf_seq_show+0x92/0xd0
      [   43.615071]  seq_read_iter+0x100/0x460
      [   43.615112]  ? init_object+0x58/0xc0
      [   43.615143]  vfs_read+0x229/0x3b0
      [   43.615172]  ksys_read+0x50/0xc0
      [   43.615209]  do_syscall_64+0x38/0xe0
      

            bzzz Alex Zhuravlev
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: