LU-19879 mdd: ignore access to non-initialized changelog

1) remove procfs entries before changelog structures are released
2) check that changelog structures are initialized before
   accessing them via procfs

Signed-off-by: Alex Zhuravlev <bzzz@whamcloud.com>
Change-Id: I287188f356e70750e00b1967cbb0d3a1523a55fe
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/64063
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Mikhail Pershin <mpershin@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>