lustre/mdd/mdd_internal.h
@@ -62,6 +62,8 @@
 #define CLM_PURGE 0x40000
 /** changelog cleanup done, to prevent double cleanup */
 #define CLM_CLEANUP_DONE 0x80000
+/** changelog has been initialized */
+#define CLM_INIT_DONE	0x100000
 
 #define LLOG_CHANGELOG_HDR_SZ (sizeof(struct llog_changelog_rec) - \
 			       sizeof(struct changelog_rec))
